
[metadata]
name = dffml-operations-flights
description = DFFML Operations to get flight data from airlines
long_description = file: README.rst
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
url = https://github.com/pdxjohnny/dffml-operations-flights
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3
install_requires =
    dffml>=0.4.0
    aiohttp>=3.7.4.post0
    beautifulsoup4>=4.9.3

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    sphinx-rtd-theme
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
